<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg1">

    <ScrollView
        android:id="@+id/activity_signup_personal_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@mipmap/text_field"
                    android:focusable="true"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="15dp">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/edtLName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@mipmap/text_field"
                    android:gravity="center"
                    android:hint="@string/l_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="15dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/text_field"
                android:gravity="center"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/text_field"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/text_field"
                android:gravity="center"
                android:hint="@string/password"
                android:maxLines="1"
                android:textSize="15dp"
                android:typeface="normal"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
              />

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/text_field"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:maxLines="1"
                android:textSize="15dp"
                android:typeface="normal"
                android:imeOptions="actionNext"
                android:inputType="textPassword"

                />


            <EditText
                android:id="@+id/edtLicenceNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/text_field"
                android:gravity="center"
                android:hint="Driver\'s License Number"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/text_field"
                android:gravity="center"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/edtPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/text_field"
                android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM"
                android:gravity="center"
                android:hint="@string/postal_code"
                android:inputType="text"
                android:maxLength="6"
                android:maxLines="1"
                android:textSize="15dp" />


            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/yellow_lite"
                android:onClick="onClick"
                android:text="@string/next"
                android:textSize="15dp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>