<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile_edit"

    >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/profile_edit"
        android:textColor="@android:color/black"
        android:textSize="15sp" />


    <android.support.v7.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:elevation="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:id="@+id/relativeBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="70dp"
                android:onClick="onClick"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@mipmap/user_default" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Name"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText

                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText

                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1" />


            <Button
                android:id="@+id/btnProfileUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/yellow_lite"
                android:text="@string/profile_update"
                android:textSize="15dp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
